<resources>
    <string name="app_name">AVALIAR IMPLANTAÇÃO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Matheus Hardman de Athayde</string>
    <string name="nav_header_subtitle">matheushard2013@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="avaliacao">Avaliação</string>
    <string name="avaliacoes">AVALIAÇÕES</string>
    <string name="cidades">CIDADES</string>
    <string name="senha">Senha</string>
    <string name="menu_item_listar_usuarios">Listar Usuarios</string>
    <string name="item_cadastrar_usuario">Cadastrar Usuario</string>
    <string name="item_cadastrar_avaliacao">Cadastrar Avaliação</string>
    <string name="item_sair">Sair</string>
    <string name="item_listar">Listar</string>
    <string name="muito_bom">Muito Bom</string>
    <string name="bom">Bom</string>
    <string name="regular">Regular</string>
    <string name="ruim">Ruim</string>
    <string name="esclarecerDuvidas">Disponibilidade para esclarecer dúvidas:</string>
    <string name="listar_avaliacoes">Listar Avaliações</string>
    <string name="exibir_total">Exibir Total</string>
    <string name="proporcionou_novos_conhecimentos">Proporcionou novos conhecimentos.</string>
    <string name="n_o_me_proporcionou_conhecimento_do_que_j_possu_a">Não me proporcionou conhecimento do que já possuía.</string>
    <string name="aplica_o_no_processo_de_trabalho">Aplicação no processo de trabalho:</string>
    <string name="clareza_facilidades_de_trabalho">Clareza/facilidades de trabalho:</string>
    <string name="conteudo_pratico">Conteudo Pratico</string>
    <string name="conteudo_teorico">Conteudo Teorico</string>
    <string name="data_inicio_avaliacao">Data Inicial da Implantação:</string>
    <string name="data_fim_avaliacao">Data Final da Implantação:</string>
    <string name="excessiva">Excessiva:</string>
    <string name="razoavel">Razoavel:</string>
    <string name="insuficiente">Insuficiente:</string>
    <string name="carga_horaria">Carga Horária:</string>
    <string name="sim">Sim: </string>
    <string name="nao">Não: </string>
    <string name="muito_bom2">Muito Bom: </string>
    <string name="bom2"> Bom: </string>
    <string name="regular2"> Regular: </string>
    <string name="ruim2"> Ruim: </string>
    <string name="instrutor">Instrutor</string>
    <string name="conhecimento_conteudo">Conhecimento do Conteudo:</string>
    <string name="clareza_exposicao">Clareza na Exposição:</string>
    <string name="equipe_de_apoio">Equipe de Apoio</string>
    <string name="data_implantacao">Data da Implantação:</string>
    <string name="sugestoes">Sugestões</string>
    <string name="botao_salvar">Salvar</string>
    <string name="seguro">Seguro:</string>
    <string name="pouco_seguro">Pouco Seguro:</string>
    <string name="inseguro">Inseguro:</string>
    <string name="gerar_excel">Gerar Excel</string>
    <string name="muito_bom3">MUITO BOM</string>
    <string name="bom3">BOM</string>
    <string name="regular3">REGULAR</string>
    <string name="ruim3">RUIM</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="uf">UF</string>
    <string name="item_cadastrar_cidade">Cadastrar Cidade</string>
    <string name="item_listar_cidade">Listar Cidades</string>
    <string name="resumo_av">Resumo Avaliação</string>
    <string name="data_geracao">Inicio da Implantação</string>
    <string name="data_geracao2">Fim da Implantação</string>
    <string name="simConfirmar">Sim</string>
    <string name="naoConfirmar">Não</string>
    <string name="total_acs">Total de Agentes</string>
    <string name="acs">ACS</string>
    <string name="ace">ACE</string>
    <string name="agente">Agente</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_implatacao">Data da Implatação</string>
</resources>
