<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Fragment_Resultado">

    <!-- TODO: Update blank fragment layout -->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#e2d6cc"
       android:orientation="vertical">

       <TextView
           android:id="@+id/textView28"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="20dp"
           android:paddingBottom="20dp"
           android:text="@string/listar_avaliacoes"
           android:textAlignment="center"
           android:textColor="@color/titulo"
           android:textSize="30sp"
           android:textStyle="bold" />

       <TextView

           android:id="@+id/textView35"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:background="@drawable/textview_sub_menu"
           android:text="@string/cidade"
           android:textAlignment="center"
           android:textColor="@android:color/white"
           android:textSize="20sp" />

       <Spinner
           android:id="@+id/spinnerResultado"
           android:layout_width="match_parent"
           android:layout_height="35dp"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="0dp"
           android:layout_marginRight="10dp"
           />

       <TextView
           android:id="@+id/textView38"
           android:layout_width="match_parent"
           android:layout_height="39dp" />

       <TextView
           android:id="@+id/textView24"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:background="@drawable/textview_sub_menu"
           android:text="@string/agente"
           android:textAlignment="center"
           android:textColor="@android:color/white"
           android:textSize="20sp" />


       <RadioGroup
           android:id="@+id/radioGroupAgente"
           android:layout_width="match_parent"
           android:layout_height="62dp"
           android:orientation="horizontal"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp">

           <RadioButton
               android:id="@+id/radioButtonACS"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/acs" />

           <RadioButton
               android:id="@+id/radioButtonACE"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/ace" />

       </RadioGroup>
       <Button
           android:id="@+id/buttonListasAvaliacoes"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:background="@drawable/botao_listar"
           android:text="Listar Avaliações"
           android:textColor="@android:color/white"
           android:textStyle="bold" />


       <Button
           android:id="@+id/buttonResultado"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:background="@drawable/botao_excel"
           android:text="@string/exibir_total"
           android:textColor="@android:color/white"
           android:textStyle="bold" />


   </LinearLayout>

</FrameLayout>